# MUXKIT

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  README.zh-CN.md  build.sh  keybinds.conf
.github/workflows/: c-cpp.yml  release.yml
Formula/: muxkit.rb
aur/: .SRCINFO  PKGBUILD
debian/: changelog  control  copyright  rules
include/: client.h  i18n.h  input.h  keyboard.h  list.h  log.h  main.h  muxkit-protocol.h  render.h  server.h  spawn.h  util.h  version.h  window.h
src/client/: client.c
src/common/: i18n.c  keyboard.c  log.c  util.c
src/core/: main.c
src/server/: server.c  spawn.c
src/ui/: input.c  render.c  window.c
